# tp8-classes-depeyris_delaruelle

./: .gitignore  CMakeLists.txt  README.md  animal.cpp  animal.h  attaque.cpp  attaque.h  lion.cpp  lion.h  loup.cpp  loup.h  main.cpp  ours.cpp  ours.h  pierre.cpp  pierre.h  plateau.cpp  plateau.h
